# ticket

./: .env  .gitignore  Cargo.toml
app/: build.js  config.json  index.html  package.json  tsconfig.json
app/css/: main.css  theme.css
app/src/: AuthenticationManager.tsx  main.tsx
dev/: build-public.dockerfile  build-ticket.dockerfile  config.toml  db-setup.sql  docker-compose.yml  docker.toml  http-client.env.json  init.sql  public.dockerfile  test.http  ticket.dockerfile
src/: api.rs  auth.rs  config.rs  jwk.rs  main.rs  oidc.rs
